--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Pat Kruadamrong</title>
+  <link rel="icon" href="image/teddy-bear.png" type="image/png">
 </head>
+
 <body>
-  <DIV>
-    ("HALLOWWWW")
-  </DIV>
+  <h1>Hallo</h1>
+  <p>word</p>
+  <span>Lorem, ipsum dolor.</span>
+  <span>Lorem, ipsum dolor.</span>
+  <span>Lorem, ipsum dolor.</span>
 </body>
+
 </html>
